# tanu-markdown

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  LICENCE  PROJECT_STATUS.md  README.md  README_JP.md  agent-tasks.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
tmd-cli/: .gitignore  Cargo.toml
tmd-cli/src/: main.rs
tmd-core/: .gitignore  Cargo.toml  README.md
tmd-core-ffi/: Cargo.toml
tmd-core-ffi/src/: lib.rs
tmd-core/src/: lib.rs  tests.rs
tmd-sample/: .gitignore  README.md  sample.tmd  sample.tmdz
tmd-vscode/: .gitignore  SAVE_HOOK_PSEUDOCODE.md  language-configuration.json  package.json  tsconfig.json
tmd-vscode/src/: extension.ts
