[package]
name = "tmd-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tmd-core = { path = "../tmd-core" }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate", "time", "aes-crypto"] }
pulldown-cmark = "0.9"
base64 = "0.21"
html-escape = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
sha2 = "0.10"
