[package]
name = "tmd-core"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate", "time", "aes-crypto"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
mime = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
tempfile = "3"
hex = "0.4"
